chore(primitives-traits): wip

--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -7,6 +7,7 @@ repository.workspace = true
 
 [dependencies]
 alloy-primitives.workspace = true
+swarm-primitives-traits.workspace = true
 
 # misc
 anyhow.workspace = true
